# network-lab

./: .env.example  .gitignore  README.md  docker-compose.yml  guacamole.properties  initdb.sh  shell.nix
backend/: Cargo.toml
backend/migrations/: 0001_init.sql
backend/src/: guacamole.rs  main.rs  models.rs  qemu.rs  routes.rs
docker/: docker-compose.yml
