[package]
name = "network-lab-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
dotenv = "0.15.0"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
reqwest = { version = "0.12", features = ["json"] }
